# taskiq_clickhouse

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: operator-guide.md  release-checklist.md  release-notes-0.1.0rc1.md  storage-poc-report.md  user-guide.md
docs/examples/: __init__.py  taskiq_app.py
scripts/: check_all_position.py
src/taskiq_clickhouse/: __init__.py  _backend_composition.py  _backend_config.py  _backend_ports.py  _backend_progress.py  _backend_results.py  _backend_runtime.py  _cli.py  _cli_drift_reporting.py  _cli_reporting.py  _client_lifecycle.py  _config_input.py  _config_models.py  _config_validation.py  _datetime64.py  _executor_admission.py  _executor_pool.py  _identifiers.py  _lifecycle.py  _lifecycle_lease.py  _mapping_snapshot.py  _progress_ports.py  _progress_serialization.py  _public_error_boundary.py  _result_model.py  _result_ports.py  _schema_drift.py  _serialization.py  _serializer_boundary.py  _sql.py  _storage_policy.py  _taskiq_compat.py  _types.py  _uuid4.py  _write_acknowledgement.py  backend.py  exceptions.py  receiver.py  schema.py
src/taskiq_clickhouse/_clickhouse/: __init__.py  adapter.py  contracts.py  errors.py  queries.py  request.py
src/taskiq_clickhouse/_schema/: __init__.py  _drift_projection.py  _inspection_diff.py  _inspection_diff_types.py  _inspection_sql.py  _inspection_types.py  canonical.py  codec.py  contracts.py  inspection.py  integrity.py  layout.py  migration_parameters.py  migrations.py  ports.py  records.py  registry.py  runner.py  table_definition.py  transport.py  validation.py
src/taskiq_clickhouse/_storage/: __init__.py  acknowledged_writer.py  bindings.py  generation.py  generation_allocator.py  layout.py  progress_records.py  progress_repository.py  projections.py  queries.py  record_validation.py  repository.py  result_records.py  result_repository.py  row_shape.py
src/taskiq_clickhouse/sql/migrations/: v001_create_progress_table.sql  v001_create_result_table.sql
src/taskiq_clickhouse/sql/schema/: create_metadata_table.sql  describe_table.sql  inspect_columns.sql  inspect_table.sql  metadata_confirmation.sql  metadata_read.sql  server_now.sql
src/taskiq_clickhouse/sql/storage/: allocate_generation.sql  progress_confirmation.sql  progress_latest.sql  result_confirmation.sql  result_no_log.sql  result_readiness.sql  result_with_log.sql
tests/: __init__.py  conftest.py  schema_testkit.py  serializer_testkit.py  test_backend.py  test_backend_progress.py  test_backend_results.py  test_backend_runtime.py  test_cli_reporting.py  test_documentation.py  test_factories.py  test_package.py  test_progress_serialization.py  test_schema_cli.py  test_schema_gateway.py  test_schema_inspection.py  test_schema_manager.py  test_schema_registry.py  test_schema_runner.py  test_serialization.py  test_storage_layout.py  test_storage_policy.py  test_storage_queries.py  test_storage_records.py  test_storage_repository.py  test_write_acknowledgement.py
tests/factories/: __init__.py  backend.py  incidental.py  receiver.py  results.py  schema.py  storage.py
tests/integration/: __init__.py  actions.py  evidence.py  fixtures.py  poc_bytes_time.py  poc_client_contracts.py  poc_schema_queries.py  pytest_plugin.py  settings.py  test_backend_progress_path.py  test_backend_result_path.py  test_clickhouse_environment.py  test_schema_inspection.py  test_schema_registry_runner.py  test_storage_migration_v1.py  test_storage_poc_bytes_time.py  test_storage_poc_client_contracts.py  test_storage_poc_schema_queries.py  test_storage_repository.py  test_storage_retention_floor.py  test_taskiq_result_backend.py
tests/integration/backend_failure_matrix/: __init__.py  access_control.py  assertions.py  backend_factory.py  constants.py  gateway_probe.py  table_io.py  test_auth_permissions.py
tests/integration/result_contract/: __init__.py  assertions.py  backend_actions.py  constants.py  consume_actions.py  gateways.py  models.py  observations.py  race_actions.py  scenario_actions.py  test_public_logs.py  test_public_races.py  test_public_results.py
tests/integration/storage_migration_contract/: __init__.py  actions.py  assertions.py  cases.py  gateways.py  probes.py  queries.py
tests/integration/storage_repository_contract/: __init__.py  assertions.py  cases.py  gateways.py  record_builders.py  repository_actions.py  response_loss.py  table_io.py
tests/result_contract/: __init__.py  assertions.py  backend_actions.py  models.py  network_actions.py  serializer_cases.py  test_network_failures.py  test_public_failures.py  test_serializers.py
tests/result_serialization/: __init__.py  execution_doubles.py  test_execution.py
tests/taskiq_boundary/: __init__.py  assertions.py  conftest.py  constants.py  doubles.py  integration_actions.py  models.py  result_assertions.py  taskiq_actions.py  test_async_task.py  test_progress_tracker.py  test_receiver.py  test_result_persistence_receiver.py
tests/unit/: __init__.py  test_exceptions.py  test_executor_admission.py  test_executor_pool.py  test_identifiers.py  test_lifecycle_deadlines.py  test_lifecycle_lease.py  test_public_error_boundary.py  test_schema_drift_report.py  test_schema_model.py  test_serializer_boundary.py  test_sql_resources.py  test_table_definition.py  test_time_contract.py
